argocd/argocd-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80         # Exposed to ingress
      targetPort: 8080 # Container port
  selector:
    app.kubernetes.io/name: argocd-server
